--- a/style_Index.css
+++ b/style_Index.css
@@ -11,10 +11,10 @@
 
 @keyframes CHAT_BAR_HOVER {
     from {
-        border: 5px solid var(--unhovered-chat-bar-border-color);
+        border: 3px solid var(--unhovered-chat-bar-border-color);
     }
     to {
-        border: 10px solid darkslateblue;
+        border: 5px solid darkslateblue;
         border-radius: 9px;
     }
 }
@@ -59,26 +59,29 @@ body {
     font-family: "Sansation", sans-serif;
     font-weight: 400;
     font-style: normal;
+    display: flex;
 }
 
 #chat-text-input {
     margin: auto;
     width: 1100px;
-    border: 5px solid var(--unhovered-chat-bar-border-color);
+    border: 3px solid var(--unhovered-chat-bar-border-color);
     border-radius: 5px;
     font-family: "Sansation", sans-serif;
     color: white;
     min-height: 50px;
     height: fit-content;
     padding: 5px;
+    background-color: #283549;
+    justify-self: center;
 }
 
 #chat-text-input:hover {
-    animation: CHAT_BAR_HOVER 0.5s forwards;
+    animation: CHAT_BAR_HOVER 0.3s forwards;
 }
 
 #chat-text-input:focus {
-    border: 10px solid darkslateblue;
+    border: 5px solid darkslateblue;
     border-radius: 9px;
     outline: 1px solid white;
 }
@@ -93,6 +96,7 @@ body {
     background-color: var(--chat-messages-background-color);
     overflow-y: scroll;
     min-height: 500px;
+    justify-self: center;
 }
 
 #chat-messages:hover {
@@ -148,6 +152,37 @@ body {
 .chat_Message_TextContent {
     grid-area: text;
 }
+
+#user-settings-label {
+    border: 2px solid var(--unhovered-chat-bar-border-color);
+    display: flex;
+}
+
+#user-settings-label-pfp {
+    border: 2px solid slategrey;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 20px;
+}
+
+#user-settings-label-name {
+    margin: 5px;
+    font-size: 20px;
+    font-family: Bahnschrift, sans-serif;
+}
+
+#user-settings-button {
+    display: blocK;
+    height: 30px;
+    width: 30px;
+    margin: 5px;
+    border: 2px solid var(--chat-messages-border-color);
+    border-radius: 5px;
+    justify-self: center;
+}
+
+
 
 
 /*[contenteditable]:focus {
